# picard

./: Cargo.toml  README.md  config.toml
src/: config.rs  main.rs  panel.rs  sim.rs
src/panels/: airspeedindicator.rs  eventsim.rs  mod.rs
